--- a/Resources/Private/Language/de.locallang_csh_tx_events_domain_model_event.xlf
+++ b/Resources/Private/Language/de.locallang_csh_tx_events_domain_model_event.xlf
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
   <file source-language="en" datatype="plaintext" original="messages" date="2013-12-09T13:09:45Z"
-        product-name="gb_events">
+        product-name="events">
     <header/>
 
     <body>
